--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.12",
     "next": "^14.2.13",
     "next-sitemap": "^4.2.3",
     "react": "^18",
